# OspreyProject

./: CMakeLists.txt  README.md
.github/workflows/: build.yml
client/: CMakeLists.txt
client/src/: .main.cpp.swo  .main.cpp.swp  DataProcessor.cpp  DataProcessor.h  FileReader  FileReader.cpp  FileReader.h  PacketParser.cpp  PacketParser.h  PacketParserAlt.cpp  \  a.out  clarity.cpp  exp  ingestion.grpc.pb.h  ingestion.pb.h  main.cpp  mainfocus.cpp
client/src/HDF5/: HDF5_Parser.cpp
generatedfiles/: annotation.grpc.pb.cc  annotation.grpc.pb.h  annotation.pb.cc  annotation.pb.h  common.grpc.pb.h  common.pb.cc  common.pb.h  ingestion.grpc.pb.cc  ingestion.pb.cc  query.grpc.pb.cc  query.grpc.pb.h  query.pb.cc  query.pb.h
proto/: CMakeLists.txt  compile_protos.sh  ex.txt  ingestion.proto  query.proto
readFile/: read  read.cpp
server/: CMakeLists.txt
server/src/: main.cpp
